--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.16.1",
     "cors": "^2.8.5",
     "express": "^4.19.2"
   },
